# GPU-Systems-Documentation-Assistant

./: .gitignore  README.md  main.py  pyproject.toml
api/: dependencies.py  router_chat.py  router_health.py  schemas.py
core/: logger.py  utils.py
inference/: generator.py  prompts.py
ingestion/: chunker.py  embedder.py
parser/: chunker.py  downloader.py  embedder.py  parser.py
retrieval/: index_builder.py  retriever.py
