[project]
name = "cuda-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.49.0",
]
